jupyter-lab/jupyter-lab-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jupyter-lab
  labels:
    tier: airflow
    component: worker
    release: mlstudio
spec:
  restartPolicy: Never
  containers:
    - name: jupyter-lab
      image: mlstudio/jupyterlab4.1.8:latest
      imagePullPolicy: IfNotPresent
      workingDir: /home/mlstudio
      args: []
      command: []
      resources: {}
      volumeMounts:
        - name: config
          mountPath: /opt/mlstudio/config/mlstudio-config.json
          subPath: mlstudio-config.json
          readOnly: true
        - name: config
          mountPath: /opt/mlstudio/config/mlstudio-config2.json
          subPath: mlstudio-config2.json
          readOnly: true
        - name: host-mount
          mountPath: "/opt/mlstudio/piplines"
          subPath: mlstudio/pipelines
          readOnly: true
        - name: host-mount
          mountPath: "/opt/mlstudio/input"
          subPath: mlstudio/pipelines/pipelienid/nodeid/input
          readOnly: false
        - name: host-mount
          mountPath: "/opt/mlstudio/output"
          subPath: mlstudio/pipelines/pipelienid/nodeid/output
          readOnly: false
        - name: host-mount
          mountPath: "/opt/mlstudio/source"
          subPath: mlstudio/pipelines/pipelienid/nodeid/source
          readOnly: false
  volumes:
    - name: config
      configMap:
        name: mlstudio-config
    - name: host-mount
      persistentVolumeClaim:
        claimName: pvc-host
