jupyter-lab/jupyter-lab-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-lab-nodeport
  labels:
    app: jupyter-lab
spec:
  type: NodePort
  selector:
    app: jupyter-lab
  ports:
    -
      name: jupyter-lab
      port: 8888
      nodePort: 30110
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-lab
  labels:
    app: jupyter-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-lab
  template:
    metadata:
      labels:
        app: jupyter-lab
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
        - name: jupyter-lab
          image: mlstudio/jupyterlab4.1.8:latest
          # image: mlstudio/jupyterlab-extenstions4.1.8:latest
          imagePullPolicy: IfNotPresent
          workingDir: /home/mlstudio
          # workingDir: /opt/mlstudio
          args:
            - bash
            - -c
            - jupyter lab --port=8888 --no-browser --ip=0.0.0.0 --allow-root --LabApp.token=''
          ports:
            - name: jupyter-lab
              containerPort: 8888
          volumeMounts:
            - name: config
              mountPath: /opt/mlstudio/config/mlstudio-confog.json
              subPath: mlstudio-confog.json
              readOnly: true
            - name: config
              mountPath: /opt/mlstudio/config/mlstudio-confog2.json
              subPath: mlstudio-confog2.json
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: mlstudio-config
