jupyter-lab/jupyter-lab.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-lab-nodeport
  labels:
    app: jupyter-lab
spec:
  type: NodePort
  selector:
    app: jupyter-lab
  ports:
    -
      name: jupyter-lab
      port: 8888
      nodePort: 30110
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-lab
  labels:
    app: jupyter-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-lab
  template:
    metadata:
      labels:
        app: jupyter-lab
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      # serviceAccountName: jupyter-lab
      # securityContext: 
      #   runAsUser: 1000
      #   fsGroup: 0
      containers:
        # Always run the main scheduler container.
        - name: jupyter-lab
          image: mlstudio/jupyterlab4.1.8:latest
          # image: mlstudio/jupyterlab-extenstions4.1.8:latest
          imagePullPolicy: IfNotPresent
          workingDir: /home/mlstudio
          # workingDir: /opt/mlstudio
          args:
            - bash
            - -c
            - jupyter lab --port=8888 --no-browser --ip=0.0.0.0 --allow-root --LabApp.token=''
          ports:
            - name: jupyter-lab
              containerPort: 8888
          # envFrom:
          #   []
          # env:
          #   # Dynamically created environment variables
          #   # Dynamically created secret envs
            
          #   # Extra env          
          #   # Hard Coded Airflow Envs
          #   - name: AIRFLOW__CORE__FERNET_KEY
          #     valueFrom:
          #       secretKeyRef:
          #         name: apache-airflow-fernet-key
          #         key: fernet-key
          #   - name: MLSTUDIO_HOME
          #     value: /opt/mlstudio
          # livenessProbe:
          #   initialDelaySeconds: 10
          #   timeoutSeconds: 20
          #   failureThreshold: 5
          #   periodSeconds: 60
          #   exec:
          #     command:              
          #       - sh
          #       - -c
          #       - |
          #         CONNECTION_CHECK_MAX_COUNT=0 AIRFLOW__LOGGING__LOGGING_LEVEL=ERROR exec /entrypoint \
          #         airflow jobs check --job-type SchedulerJob --local
          # startupProbe:
          #   timeoutSeconds: 20
          #   failureThreshold: 6
          #   periodSeconds: 10
          #   exec:
          #     command:              
          #       - sh
          #       - -c
          #       - |
          #         CONNECTION_CHECK_MAX_COUNT=0 AIRFLOW__LOGGING__LOGGING_LEVEL=ERROR exec /entrypoint \
          #         airflow jobs check --job-type SchedulerJob --local
          # resources:
          #   {}
          volumeMounts:
            - name: config
              mountPath: /opt/mlstudio/config/mlstudio-confog.json
              subPath: mlstudio-confog.json
              readOnly: true
            - name: config
              mountPath: /opt/mlstudio/config/mlstudio-confog2.json
              subPath: mlstudio-confog2.json
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: mlstudio-config
      #   - name: dags
      #     persistentVolumeClaim:
      #       claimName: pvc-host
      #   - name: logs
      #     persistentVolumeClaim:
      #       claimName: pvc-host-airflow-logs
