jupyter-lab/ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-lab-ssh-svc-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: jupyter-lab
  ports:
    -
      name: jupyter-lab
      port: 22
      nodePort: 30222
