jupyter-lab/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-lab-svc-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: jupyter-lab
  ports:
    -
      name: jupyter-lab
      port: 8888
      nodePort: 30110
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-lab-svc
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: port8888
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: jupyter-lab
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
  name: jupyter-lab-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /jupyter-lab
        pathType: ImplementationSpecific
        backend:
          service:
            name: jupyter-lab-svc
            port:
              number: 8888
