jupyter-lab/jupyter-lab-pod2.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-lab-svc-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: jupyter-lab
  ports:
    -
      name: jupyter-lab
      port: 8888
      nodePort: 30110
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-lab-svc
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: port8888
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: jupyter-lab
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
  name: jupyter-lab-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /jupyter-lab
        pathType: ImplementationSpecific
        backend:
          service:
            name: jupyter-lab-svc
            port:
              number: 8888
---
apiVersion: v1
kind: Pod
metadata:
  name: jupyter-lab
  labels:
    app: jupyter-lab
spec:
  restartPolicy: Never
  terminationGracePeriodSeconds: 5
  containers:
    - name: jupyter-lab
      image: mlstudio/jupyterlab4.1.8:latest
      # image: mlstudio/jupyterlab-extenstions4.1.8:latest
      imagePullPolicy: IfNotPresent
      # workingDir: /home/mlstudio
      workingDir: /opt/mlstudio/source
      args:
        - bash
        - -c
        # - jupyter lab --port=8888 --no-browser --ip=0.0.0.0 --allow-root --LabApp.token=''
        - jupyter lab --no-browser --ip=0.0.0.0 --allow-root
      ports:
        - name: jupyter-lab
          containerPort: 8888
      resources:
        requests:
          memory: "1Gi"
          cpu: "1"
        limits:
          memory: "1Gi"
          cpu: "1"
      volumeMounts:
        - name: jupyter-lab-config
          mountPath: "/home/mlstudio/.jupyter/jupyter_lab_config.py"
          subPath: jupyter_lab_config.py
          readOnly: false
        - name: config
          mountPath: /opt/mlstudio/config/mlstudio-config.json
          subPath: mlstudio-config.json
          readOnly: true
        - name: config
          mountPath: /opt/mlstudio/config/mlstudio-config2.json
          subPath: mlstudio-config2.json
          readOnly: true
        - name: host-mount
          mountPath: "/opt/mlstudio/piplines"
          subPath: mlstudio/pipelines
          readOnly: true
        - name: host-mount
          mountPath: "/opt/mlstudio/output"
          subPath: mlstudio/pipelines/pipelienid/nodeid/output
          readOnly: false
        - name: host-mount
          mountPath: "/opt/mlstudio/source"
          subPath: mlstudio/pipelines/pipelienid/nodeid/source
          readOnly: false
        - name: host-mount
          mountPath: "/opt/mlstudio/interface"
          subPath: mlstudio/interface
          readOnly: false
        - name: host-mount
          mountPath: "/opt/mlflow/mlruns"
          subPath: mlflow/mlruns
          readOnly: false

  volumes:
    - name: jupyter-lab-config
      configMap:
        name: jupyter-lab-config
    - name: config
      configMap:
        name: mlstudio-config
    - name: host-mount
      persistentVolumeClaim:
        claimName: pvc-host
